# rules_ruby

./: .bash_bazel  .bazelproject  .bazelrc  .env  .envrc  .gitignore  .readme  .rspec  .rubocop.yml  .rubocop_todo.yml  .ruby-version  .shellcheckrc  .travis.yml  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  Makefile  README.adoc  README.md  VERSION.yml  WORKSPACE
.circleci/: .bazelrc  Dockerfile  README.md  build.sh  config-cache-pre-gen.yml  config.yml
.github/: CODEOWNERS
.github/workflows/: tests.yaml
.travis/: install-bazel.sh
docs/: faq.md  rules_ruby_architecture.md
examples/: Gemfile  README.md  WORKSPACE
examples/apps/foo-bar/lib/: BUILD  foo.rb
examples/apps/foo-bar/lib/foo/: BUILD  bar.rb
examples/apps/foo-bar/spec/foo/: BUILD  version_spec.rb
examples/example_gem/: BUILD  BUILD.bazel  WORKSPACE
examples/example_gem/lib/: BUILD  example_gem.rb
examples/example_gem/lib/foo/: BUILD  bar.rb
examples/lib/: BUILD.bazel  foo.rb
examples/lib/foo/: BUILD.bazel  bar.rb  version.rb
examples/simple_host_script/: Gemfile  script.rb
examples/simple_host_script/lib/: BUILD
examples/simple_lambda/: BUILD.bazel  Gemfile  README.md  WORKSPACE  template.yml
examples/simple_lambda/lib/: lambda.rb
examples/simple_rails_api/: BUILD  Gemfile  README.md  WORKSPACE
examples/simple_rails_api/app/controllers/: application_controller.rb  home_controller.rb
examples/simple_rails_api/config/: application.rb  database.yml  routes.rb
examples/simple_rails_api/config/environments/: development.rb
examples/simple_script/: .rspec  .rubocop.yml  BUILD  BUILD.bazel  Gemfile  README.md  WORKSPACE  script.rb  script_spec.rb
examples/simple_script/exe/: simple-script  simple_script
examples/simple_script/lib/: BUILD  foo.rb  simple_script.rb
examples/simple_script/lib/foo/: foo.rb
examples/simple_script/spec/: script_spec.rb  spec_helper.rb
examples/simple_script/spec/lib/: foo_spec.rb  simple_script_spec.rb
examples/simple_script/spec/lib/foo/: foo_spec.rb
examples/simple_script_vendored/: .rubocop.yml  BUILD.bazel  Gemfile  README.md  WORKSPACE  script.rb
examples/simple_script_vendored/lib/: BUILD  foo.rb
examples/simple_script_vendored/spec/: spec_helper.rb
examples/simple_script_vendored/spec/lib/: foo_spec.rb
examples/spec/: spec_helper.rb
examples/spec/foo/: BUILD.bazel  version_spec.rb
ruby/: BUILD.bazel  def.bzl  defs.bzl  deps.bzl  ruby_runtime.bzl  ruby_toolchain.bzl
ruby/private/: BUILD.bazel  BUILD.host_runtime.tpl  binary.bzl  binary_runner.tpl  binary_wrapper.tpl  bundle.bzl  bundle_buildfile.tpl  bundler.bzl  constants.bzl  dependencies.bzl  deploy_package.bzl  gem.bzl  gemspec.bzl  gemspec_template.tpl  helpers.bzl  host_runtime.bzl  install-bundler.rb  library.bzl  providers.bzl  repository_context.bzl  rspec.bzl  rubocop.bzl  runtime_alias.bzl  sdk.bzl  toolchain.bzl
ruby/private/bundle/: BUILD.bundle.tpl  BUILD.gem.erb  build_file_generator.rb  bundle.bzl  create_bundle_build_file.rb  def.bzl  download_gem.rb  gem_install.bzl  gems.bzl  install_bundler.rb  ruby_bundle_install.rb  ruby_helpers.rb  ruby_install_gem.rb
ruby/private/gemspec/: BUILD.bazel  def.bzl  gemspec_template.tpl  readme_template.tpl
ruby/private/package/: ruby_package.bzl
ruby/private/rubocop/: BUILD.bazel  def.bzl  runner.sh.tpl
ruby/private/ruby_sandbox_files/: debug_counter.h.patch  ruby_v2_6_3.BUILD
ruby/private/rubybuild/: ruby_v2_6_3.BUILD
ruby/private/rubygems/: .gitignore  BUILD.bazel  BUILD.bundle.erb  BUILD.gem.erb  Gemfile  README.md  bundle.bzl  bundle_install.rb  gem_handler.rb  gem_install.rb  gemset.bzl  rules_ruby.rb  shared.bzl
ruby/private/rubygems/lib/: BUILD.bundler.tpl  BUILD.gem.binary.tpl  BUILD.gem.library.tpl  BUILD.header.tpl  rules_ruby.rb
ruby/private/rubygems/lib/rules_ruby/: bundle.rb  gemset.rb
ruby/private/rubygems/spec/: spec_helper.rb
ruby/private/rubygems/spec/rules_ruby/: bundle_spec.rb  gemset_spec.rb
ruby/private/toolchains/: BUILD.26_runtime.tpl  BUILD.bazel  BUILD.host_runtime.tpl  BUILD.runtime.tpl  BUILD.sandbox_runtime.tpl  host_runtime.bzl  interpreter_wrapper.tpl  repository_context.bzl  ruby26_runtime.bzl  ruby_runtime.bzl  ruby_sandbox_runtime.bzl
ruby/private/tools/: deprecations.bzl  deps.bzl  repository_context.bzl  runfiles.rb
ruby/private/toolset/: BUILD.bundler.tpl  BUILD.gem.binary.tpl  BUILD.gem.library.tpl  BUILD.header.tpl  README.md  ruby_bundle_install.rb  ruby_helpers.rb  ruby_install_gem.rb
ruby/runtime/: BUILD.bazel  version_support.bzl
ruby/tests/: BUILD.bazel  args_check.rb  container_test.sh  diff_test.rb  example_ext.c  ext_test.rb  include_order_check.rb  load_path_in_runfiles_test.rb  runtime_run_ruby_test.sh
ruby/tests/testdata/: BUILD.bazel  a.rb  b.rb  c.rb  e.rb
ruby/tests/testdata/another_workspace/: WORKSPACE
ruby/tests/testdata/another_workspace/baz/qux/: BUILD.bazel  j.rb  k.rb
ruby/tests/testdata/bar/: i.rb
ruby/tests/testdata/bundle_includes_workspace/: BUILD.bazel  Gemfile  WORKSPACE  script.rb
ruby/tests/testdata/bundled_commands/: erb_input  irb_golden  irb_input  rake_input
ruby/tests/testdata/foo/: g.rb  h.rb
ruby/toolchain/: BUILD.bazel  toolchains.bzl
ruby/tools/: init_loadpath.rb
sbin/: baz  setup
sbin/lib/: bazel.sh
spec/: spec_helper.rb
spec/private/bundle/: build_file_generator_spec.rb
spec/private/rubygems/: Gemfile.lock.backup  bundle_install_spec.rb  gem_install_spec.rb
toolchains/: BUILD  REPOSITORIES.bzl  cc_toolchain_config.bzl
toolchains/dev/: BUILD
toolchains/dev/darwin-x86_64/: BUILD  README.md  cc_toolchain_config.bzl.tmpl  toolchain.bzl
