package(
    default_visibility = [
        "//examples/lib:__pkg__",
        "//examples/spec/foo:__pkg__",
    ],
)

load(
    "@com_github_yugui_rules_ruby//ruby:def.bzl",
    "ruby_library",
)

ruby_library(
    name = "bar",
    srcs = ["bar.rb"],
)

ruby_library(
    name = "version",
    srcs = ["version.rb"],
)
