load(
    "//ruby:defs.bzl",
    "ruby_library",
)

package(default_visibility = ["//ruby/tests:__pkg__"])

exports_files([
    "bundled_commands/erb_golden",
    "bundled_commands/erb_input",
    "bundled_commands/irb_golden",
    "bundled_commands/irb_input",
    "bundled_commands/rake_golden",
    "bundled_commands/rake_input",
])

#
# Dependency Graph::
#
#  a --+--d--+--e
#      |     |
#  b --+     |
#            |
#  c---+-----+
#
#  f
#
# g -----h-----i

ruby_library(
    name = "a",
    srcs = ["a.rb"],
    includes = ["somewhere/a"],
    deps = [":d"],
)

ruby_library(
    name = "b",
    srcs = ["b.rb"],
    includes = ["somewhere/b"],
    deps = [":d"],
)

ruby_library(
    name = "c",
    srcs = ["c.rb"],
    includes = ["somewhere/c"],
    deps = [":e"],
)

ruby_library(
    name = "d",
    srcs = ["d.rb"],
    includes = ["somewhere/d"],
    deps = [":e"],
)

ruby_library(
    name = "e",
    srcs = ["e.rb"],
    includes = ["somewhere/e"],
)

ruby_library(
    name = "f",
    srcs = ["f.rb"],
    includes = ["somewhere/f"],
)

ruby_library(
    name = "g",
    srcs = ["foo/g.rb"],
    deps = [":h"],
)

ruby_library(
    name = "h",
    srcs = ["foo/h.rb"],
    includes = ["ruby/tests/testdata"],
    deps = [":i"],
)

ruby_library(
    name = "i",
    srcs = ["bar/i.rb"],
)
